Add loging and config

--- a/app/base/templates/accounts/login.html
+++ b/app/base/templates/accounts/login.html
@@ -17,7 +17,7 @@
                     <div class="mb-4">
                         <i class="feather icon-unlock auth-icon"></i>
                     </div>
-                    <h3 class="mb-4">Login</h3>
+                    <h3 class="mb-4">MolSSI Dashboard Login</h3>
 
                     <span class="mb-0 {{ msg_class or 'text-muted' }}">
                         {% if msg %}
