--- a/app/home/templates/users-access.html
+++ b/app/home/templates/users-access.html
@@ -46,7 +46,7 @@
           <div class="col-sm-12">
             <div class="card">
               <div class="card-header">
-                <h5>Subdivisions Histogram (Blank if no subdivsion field is filled)</h5>
+                <h5>Subdivisions Histogram (Blank if no subdivision field is filled)</h5>
               </div>
               <div class="card-block">
                 <div id='subdivisionDiv'> </div>
