--- a/app/base/templates/includes/scripts.html
+++ b/app/base/templates/includes/scripts.html
@@ -24,3 +24,4 @@
 <script src="/static/assets/js/vendors/jquery.slimscroll.min.js"></script>
 <script src="/static/assets/js/vendors/pcoded.min.js"></script>
 <script src="/static/assets/js/vendors/dataTables.checkboxes.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
