--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -20,21 +20,21 @@
           <div class="col-md-6 col-xl-4">
             <div class="card daily-sales">
               <div class="card-block">
-                <h6 class="mb-4">Daily Sales</h6>
+                <h3 class="mb-4">Number of Queries</h3>
                 <div class="row d-flex align-items-center">
-                  <div class="col-9">
-                    <h3 class="f-w-300 d-flex align-items-center m-b-0"><i
-                        class="feather icon-arrow-up text-c-green f-30 m-r-10"></i>$ 249.95</h3>
+                  <div class="col-9" id="users_count">
+                    <h4 class="f-w-300 d-flex align-items-center m-b-0"><i
+                        class="feather text-c-green f-30 m-r-10"></i>n_found = {{ posts["query_n_found"] }}</h4>
                   </div>
 
-                  <div class="col-3 text-right">
+                  <!-- <div class="col-3 text-right">
                     <p class="m-b-0">67%</p>
-                  </div>
+                  </div> -->
                 </div>
-                <div class="progress m-t-30" style="height: 7px;">
+                <!-- <div class="progress m-t-30" style="height: 7px;">
                   <div class="progress-bar progress-c-theme" role="progressbar" style="width: 50%;" aria-valuenow="50"
                     aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -43,56 +43,106 @@
           <div class="col-md-6 col-xl-4">
             <div class="card Monthly-sales">
               <div class="card-block">
-                <h6 class="mb-4">Monthly Sales</h6>
+                <h3 class="mb-4">Server Info</h3>
                 <div class="row d-flex align-items-center">
                   <div class="col-9">
-                    <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i
-                        class="feather icon-arrow-down text-c-red f-30 m-r-10"></i>$ 2.942.32</h3>
+                    <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i
+                        class="feather text-c-red f-30 m-r-10"></i>{{ posts["server_information"] }}</h4>
                   </div>
-                  <div class="col-3 text-right">
+                  <!-- <div class="col-3 text-right">
                     <p class="m-b-0">36%</p>
-                  </div>
+                  </div> -->
                 </div>
-                <div class="progress m-t-30" style="height: 7px;">
+                <!-- <div class="progress m-t-30" style="height: 7px;">
                   <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 35%;" aria-valuenow="35"
                     aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
+
+
+          <div class="col-md-6 col-xl-4">
+            <div class="card daily-sales">
+              <div class="card-block">
+                <h3 class="mb-4">Number of Queries</h3>
+                <div class="row d-flex align-items-center">
+                  <div class="col-9" id="users_count">
+                    <h4 class="f-w-300 d-flex align-items-center m-b-0"><i
+                        class="feather text-c-green f-30 m-r-10"></i>n_found = {{ posts["query_n_found"] }}</h4>
+                  </div>
+
+                  <!-- <div class="col-3 text-right">
+                    <p class="m-b-0">67%</p>
+                  </div> -->
+                </div>
+                <!-- <div class="progress m-t-30" style="height: 7px;">
+                  <div class="progress-bar progress-c-theme" role="progressbar" style="width: 50%;" aria-valuenow="50"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div> -->
+              </div>
+            </div>
+          </div>
+          <!--[ daily sales section ] end-->
+          <!--[ Monthly  sales section ] starts-->
+          <div class="col-md-6 col-xl-4">
+            <div class="card Monthly-sales">
+              <div class="card-block">
+                <h3 class="mb-4">Server Info:</h3>
+                <div class="row d-flex align-items-center">
+                  <div class="col-9">
+                    <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i
+                        class="feather text-c-red f-30 m-r-10"></i>Last Update: {{ posts["server_information"]['last_update'] }}</h4>
+                  </div>
+                  <div class="col-9">
+                    <!-- <p class="m-b-0">Name: {{ posts["server_information"]['name'] }}</p> -->
+                    <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i
+                        class="feather text-c-red f-30 m-r-10"></i>Name: {{ posts["server_information"]['name'] }}</h4>
+                  
+                  </div>
+                </div>
+                <!-- <div class="progress m-t-30" style="height: 7px;">
+                  <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 35%;" aria-valuenow="35"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
+
           <!--[ Monthly  sales section ] end-->
           <!--[ year  sales section ] starts-->
           <div class="col-md-12 col-xl-4">
             <div class="card yearly-sales">
               <div class="card-block">
-                <h6 class="mb-4">Yearly Sales</h6>
+                <h3 class="mb-4">Users </h3>
                 <div class="row d-flex align-items-center">
                   <div class="col-9">
-                    <h3 class="f-w-300 d-flex align-items-center  m-b-0"><i
-                        class="feather icon-arrow-up text-c-green f-30 m-r-10"></i>$ 8.638.32</h3>
+                    <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i
+                        class="feather text-c-green f-30 m-r-10"></i>{{ posts["users_set"] }}</h4>
                   </div>
-                  <div class="col-3 text-right">
+                  <!-- <div class="col-3 text-right">
                     <p class="m-b-0">80%</p>
-                  </div>
+                  </div> -->
                 </div>
-                <div class="progress m-t-30" style="height: 7px;">
+                <!-- <div class="progress m-t-30" style="height: 7px;">
                   <div class="progress-bar progress-c-theme" role="progressbar" style="width: 70%;" aria-valuenow="70"
                     aria-valuemin="0" aria-valuemax="100"></div>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
           <!--[ year  sales section ] end-->
           <!--[ Recent Users ] start-->
-          <div class="col-xl-8 col-md-6">
+          <div class="col-xl-10 col-md-8">
             <div class="card Recent-Users">
               <div class="card-header">
                 <h5>Recent Users</h5>
               </div>
               <div class="card-block px-0 py-3">
                 <div class="table-responsive">
-                  <table class="table table-hover">
-                    <tbody>
+                  <table class="table table-hover" id="users_info_table_landing">
+                    <!-- <tbody>
                       <tr class="unread">
                         <td><img class="rounded-circle" style="width:40px;"
                             src="/static/assets/images/user/avatar-1.jpg" alt="activity-user"></td>
@@ -160,7 +210,7 @@
                         <td><a href="#!" class="label theme-bg2 text-white f-12">Reject</a><a href="#!"
                             class="label theme-bg text-white f-12">Approve</a></td>
                       </tr>
-                    </tbody>
+                    </tbody> -->
                   </table>
                 </div>
               </div>
@@ -168,7 +218,7 @@
           </div>
           <!--[ Recent Users ] end-->
 
-          <!-- [ statistics year chart ] start -->
+          <!-- [ statistics year chart ] start
           <div class="col-xl-4 col-md-6">
             <div class="card card-event">
               <div class="card-block">
@@ -176,6 +226,7 @@
                   <div class="col">
                     <h5 class="m-0">Upcoming Event</h5>
                   </div>
+
                   <div class="col-auto">
                     <label class="label theme-bg2 text-white f-14 f-w-400 float-right">34%</label>
                   </div>
@@ -210,8 +261,8 @@
               </div>
             </div>
           </div>
-          <!-- [ statistics year chart ] end -->
-          <!--[social-media section] start-->
+          [ statistics year chart ] end
+          [social-media section] start
           <div class="col-md-12 col-xl-4">
             <div class="card card-social">
               <div class="card-block border-bottom">
@@ -311,8 +362,8 @@
               </div>
             </div>
           </div>
-          <!--[social-media section] end-->
-          <!-- [ rating list ] starts-->
+          [social-media section] end
+          [ rating list ] starts
           <div class="col-xl-4 col-md-6">
             <div class="card user-list">
               <div class="card-header">
@@ -379,7 +430,7 @@
               </div>
             </div>
           </div>
-          <!-- [ rating list ] end-->
+          [ rating list ] end
           <div class="col-xl-8 col-md-12 m-b-30">
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
@@ -638,7 +689,7 @@
                 </table>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
         <!-- [ Main Content ] end -->
@@ -650,4 +701,7 @@
 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
-{% block javascripts %}{% endblock javascripts %}
+{% block javascripts %}
+<script src="/static/assets/js/pages/index.js"></script>
+
+{% endblock javascripts %}
