--- a/app/home/templates/tasks-queue-datatable.html
+++ b/app/home/templates/tasks-queue-datatable.html
@@ -2,7 +2,9 @@
 
 {% block title %} Data Table {% endblock %}
 
-{% block stylesheets %} {% endblock stylesheets %}
+
+{% block stylesheets %}
+{% endblock stylesheets %}
 
 {% block content %}
 <div class="pcoded-content">
@@ -25,7 +27,30 @@
     <div class="main-body" id="task-queue-table-main-body">
       <div class="page-wrapper">
         <table id="task_queue_table" class="table table-striped table-bordered" style="width:100%;table-layout:fixed">
+          
         </table>
+        <!-- Modal -->
+        <div class="modal fade" id="empModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+          aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Task Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+                  <i class="tim-icons icon-simple-remove"></i>
+                </button>
+              </div>
+              <div class="modal-body">
+
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
   </div>
@@ -33,4 +58,5 @@
 {% endblock content %}
 {% block javascripts %}
 <script src="/static/assets/js/pages/tasks-queue-datatable.js"></script>
+
 {% endblock javascripts %}
