--- a/app/base/templates/includes/scripts.html
+++ b/app/base/templates/includes/scripts.html
@@ -1,7 +1,10 @@
 <!-- Required Js -->
 <!-- <script src="/static/assets/js/vendor-all.min.js"></script> -->
+<!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
 
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -25,3 +28,5 @@
 <script src="/static/assets/js/vendors/pcoded.min.js"></script>
 <script src="/static/assets/js/vendors/dataTables.checkboxes.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
+
+
