--- a/app/base/templates/includes/sidebar.html
+++ b/app/base/templates/includes/sidebar.html
@@ -43,11 +43,24 @@
             <span class="pcoded-mtext">Managers Status</span>
           </a>
         </li>
+        <li data-username="dashboard Default Ecommerce CRM Analytics Crypto Project"
+          class="nav-item {% if 'index' in segment %} active {% endif %}">
+          <a href="server-error-logs.html" class="nav-link "><span class="pcoded-micon"><i
+                class="feather icon-list"></i></span><span class="pcoded-mtext">Server Error Logs</span></a>
+        </li>
         <li data-username="form elements advance componant validation masking wizard picker select"
           class="nav-item {% if 'database-statistics' in segment %} active {% endif %}">
           <a href="/database-statistics.html" class="nav-link ">
             <span class="pcoded-micon"><i class="feather icon-bar-chart-2"></i></span>
             <span class="pcoded-mtext">Database Statistics</span>
+          </a>
+        </li>
+        <li data-username="form elements advance componant validation masking wizard picker select"
+          class="nav-item {% if 'database-statistics' in segment %} active {% endif %}">
+          <a href="/calendar.html" class="nav-link ">
+            <span class="pcoded-micon"><i class="feather icon-bar-chart-2"></i></span>
+            <!-- <span class="pcoded-mtext">Database Statistics</span> -->
+            <span class="pcoded-mtext">Calendar</span>
           </a>
         </li>
         <li data-username="form elements advance componant validation masking wizard picker select"
