--- a/app/home/templates/users-access.html
+++ b/app/home/templates/users-access.html
@@ -66,6 +66,7 @@
                 <span class="glyphicon glyphicon-th"></span>
 
                 <div id='boxplotDiv'> </div>
+                <div id='myDiv'> </div>
               </div>
             </div>
           </div>
