latest version, including database statistics tab and modification to avoid bug occuring when restartin the server

--- a/app/base/templates/includes/sidebar.html
+++ b/app/base/templates/includes/sidebar.html
@@ -12,8 +12,9 @@
     <div class="navbar-content scroll-div">
       <ul class="nav pcoded-inner-navbar">
         <li data-username="dashboard Default Ecommerce CRM Analytics Crypto Project"
-          class="nav-item {% if 'index' in segment %} active {% endif %}">
-          <a href="/" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span
+          class="nav-item 
+           {% if 'index' in segment %} active {% endif %}">
+          <a href="/index" class="nav-link "><span class="pcoded-micon"><i class="feather icon-home"></i></span><span
               class="pcoded-mtext">Dashboard</span></a>
         </li>
         <li class="nav-item pcoded-hasmenu">
@@ -27,7 +28,7 @@
         <li class="nav-item pcoded-hasmenu">
           <a href="javascript:" class="nav-link ">
             <span class="pcoded-micon">
-              <i class="feather icon-lock"></i>
+              <i class="feather icon-users"></i>
             </span>
             <span class="pcoded-mtext">Users Access</span>
           </a>
@@ -48,12 +49,24 @@
           <a href="server-error-logs.html" class="nav-link "><span class="pcoded-micon"><i
                 class="feather icon-list"></i></span><span class="pcoded-mtext">Server Error Logs</span></a>
         </li>
-        <li data-username="form elements advance componant validation masking wizard picker select"
+        <!-- <li data-username="form elements advance componant validation masking wizard picker select"
           class="nav-item {% if 'database-statistics' in segment %} active {% endif %}">
           <a href="/database-statistics.html" class="nav-link ">
-            <span class="pcoded-micon"><i class="feather icon-bar-chart-2"></i></span>
+            <span class="pcoded-micon"><i class="feather icon-clipboard"></i></span>
             <span class="pcoded-mtext">Database Statistics</span>
           </a>
+        </li> -->
+        <li class="nav-item pcoded-hasmenu">
+          <a href="javascript:" class="nav-link ">
+            <span class="pcoded-micon">
+              <i class="feather icon-users"></i>
+            </span>
+            <span class="pcoded-mtext">DB Statistics</span>
+          </a>
+          <ul class="pcoded-submenu">
+            <li class=""><a href="/database-statistics.html" class="">Data Table </a></li>
+            <li class=""><a href="db_statistics_plot.html" class=""> Plot</a></li>
+          </ul>
         </li>
         <li data-username="form elements advance componant validation masking wizard picker select"
           class="nav-item {% if 'database-statistics' in segment %} active {% endif %}">
