code cleanup and adding Elastic Beanstalk requirements

--- a/app/home/templates/managers-status.html
+++ b/app/home/templates/managers-status.html
@@ -42,11 +42,10 @@
         <div class="col-sm-12">
           <div class="card">
             <div class="card-header">
-              <h5>Choose Clusternames</h5>
+              <h5>Choose Clusternames  to Plot</h5>
             </div>
             <div class="card-block">
               <select id="clusternamesdata" class="clusternamesdata">
-                <option disabled> Choose Clusternames to Plot</option>
               </select>
               <div id='clusternamesDiv'></div>
             </div>
