--- a/app/home/templates/database-statistics.html
+++ b/app/home/templates/database-statistics.html
@@ -34,7 +34,6 @@
     <!-- [ breadcrumb ] end -->
     <div class="main-body" id='db_statistics_main'>
       <div class="page-wrapper">
-        <!-- <img src="/static/assets/images/work-in-progress.png"> -->
         <div style=" margin-bottom: 50px">
           <table id="db_stats" class="table table-striped table-bordered" style="width:100%;table-layout:fixed">
           </table>
@@ -53,7 +52,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                <table id="db_table_information" class="table table-bordered"></table>
+                <table id="db_table_information" class="table table-bordered" style="width:100%;table-layout:fixed"></table>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -61,9 +60,6 @@
             </div>
           </div>
         </div>
-
-        <!-- <table id="db_stats_2" class="table table-striped table-bordered" style="width:100%;table-layout:fixed">
-        </table> -->
 
         <!-- https://datatables.net/examples/advanced_init/row_grouping.html -->
         <table id="example" class="display" style="width:100%">
