--- a/app/home/templates/users-access.html
+++ b/app/home/templates/users-access.html
@@ -82,6 +82,8 @@
 {% block javascripts %}
 <!-- <script src="/static/assets/js/pages/users-access.js"></script> -->
 <script src="/static/assets/js/pages/users-access_copy.js"></script>
+<!-- <script src="/static/assets/js/pages/users-access.js"></script> -->
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
 
 {% endblock javascripts %}
