--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -16,7 +16,7 @@
       <div class="page-wrapper">
         <!-- [ Main Content ] start -->
         <div class="row">
-          <!--[ daily sales section ] start-->
+          <!--[  section 1 ] start-->
           <div class="col-md-6 col-xl-4">
             <div class="card daily-sales">
               <div class="card-block">
@@ -25,7 +25,7 @@
                   <div class="col-9" id="users_count">
                     <h4 class="f-w-300 d-flex align-items-center m-b-0"><i class="feather text-c-green f-30 m-r-10"></i>
                       {{ posts["error_log"] }}</h4>
-                      
+
                   </div>
                   <a href="server-error-logs.html" class="label theme-bg2 text-white f-12">Details</a>
 
@@ -42,14 +42,13 @@
               </div>
             </div>
           </div>
-          <!--[ daily sales section ] end-->
-          <!--[ Monthly  sales section ] starts-->
+          <!--[  section 1] end-->
+          <!--[  section 2 ] starts-->
           <div class="col-md-6 col-xl-4">
             <div class="card Monthly-sales">
               <div class="card-block">
                 <h3 class="mb-4">Server Info (Access Types)</h3>
                 <div class="row d-flex align-items-center">
-                  <!-- <h4>{{posts['access_types']}}</h4> -->
                   <div class="col-9">
                     <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i
                         class="feather text-c-green f-30 m-r-10"></i>
@@ -73,47 +72,26 @@
               </div>
             </div>
           </div>
-
-
-          <div class="col-md-6 col-xl-4">
-            <div class="card daily-sales">
-              <div class="card-block">
-                <h3 class="mb-4">Server Info (Number of Queries)</h3>
-                <div class="row d-flex align-items-center">
-                  <div class="col-9" id="users_count">
-                    <h4 class="f-w-300 d-flex align-items-center m-b-0"><i
-                        class="feather text-c-green f-30 m-r-10"></i>n_found = {{ posts["query_n_found"] }}</h4>
-                  </div>
-
-                  <!-- <div class="col-3 text-right">
-                    <p class="m-b-0">67%</p>
-                  </div> -->
-                </div>
-                <!-- <div class="progress m-t-30" style="height: 7px;">
-                  <div class="progress-bar progress-c-theme" role="progressbar" style="width: 50%;" aria-valuenow="50"
-                    aria-valuemin="0" aria-valuemax="100"></div>
-                </div> -->
-              </div>
-            </div>
-          </div>
-          <!--[ daily sales section ] end-->
-          <!--[ Monthly  sales section ] starts-->
           <div class="col-md-6 col-xl-4">
             <div class="card Monthly-sales">
               <div class="card-block">
                 <h3 class="mb-4">Server Info:</h3>
                 <div class="row d-flex align-items-center">
-                  <div class="col-9">
-                    <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i
-                        class="feather text-c-red f-30 m-r-10"></i>Last Update:
-                      {{ posts["server_information"]['last_update'] }}</h4>
-                  </div>
                   <div class="col-9" style="padding-top: 10px;">
                     <!-- <p class="m-b-0">Name: {{ posts["server_information"]['name'] }}</p> -->
-                    <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i
-                        class="feather text-c-red f-30 m-r-10"></i>Name: {{ posts["server_information"]['name'] }}</h4>
+                    <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather text-c-red f-30 m-r-10"></i>
+                      - Name: {{ posts["server_information"]['name'] }}</h4>
 
                   </div>
+                  <div class="col-9">
+                    <!-- <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i
+                        class="feather text-c-red f-30 m-r-10"></i>Last Update:
+                      {{ posts["server_information"]['last_update'] }}</h4> -->
+                    <h4 class="f-w-300 d-flex align-items-center  m-b-0"><i class="feather text-c-red f-30 m-r-10"></i>
+                      - Version:
+                      {{ posts["server_information"]['version'] }}</h4>
+                  </div>
+
                 </div>
                 <!-- <div class="progress m-t-30" style="height: 7px;">
                   <div class="progress-bar progress-c-theme2" role="progressbar" style="width: 35%;" aria-valuenow="35"
@@ -123,9 +101,34 @@
             </div>
           </div>
 
+          <!-- <div class="col-md-6 col-xl-4">
+            <div class="card daily-sales">
+              <div class="card-block">
+                <h3 class="mb-4">Server Info (Number of Queries)</h3>
+                <div class="row d-flex align-items-center">
+                  <div class="col-9" id="users_count">
+                    <h4 class="f-w-300 d-flex align-items-center m-b-0"><i
+                        class="feather text-c-green f-30 m-r-10"></i>n_found = {{ posts["query_n_found"] }}</h4>
+                  </div>
 
-          <!--[ Monthly  sales section ] end-->
-          <!--[ year  sales section ] starts-->
+                  <div class="col-3 text-right">
+                    <p class="m-b-0">67%</p>
+                  </div>
+                </div>
+                <div class="progress m-t-30" style="height: 7px;">
+                  <div class="progress-bar progress-c-theme" role="progressbar" style="width: 50%;" aria-valuenow="50"
+                    aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+              </div>
+            </div>
+          </div> -->
+          <!--[  section 2 ] end-->
+          <!--[  section 3 ] starts-->
+
+
+
+          <!--[  section 3 ] end-->
+          <!--[ section 4 ] starts-->
           <div class="col-md-12 col-xl-4">
             <div class="card yearly-sales">
               <div class="card-block">
@@ -154,7 +157,7 @@
               </div>
             </div>
           </div>
-          <!--[ year  sales section ] end-->
+          <!--[ section 4 ] end-->
           <!--[ Recent Users ] start-->
           <div class="col-xl-10 col-md-8">
             <div class="card Recent-Users">
